# nidus

./: .env.example  .gitignore  Dockerfile  README.md  agents.py  config.py  database.py  dev_team_config.yaml  docker-compose.yml  interface.py  main.py  pyproject.toml  state.py
config/: research_team.yml
tools/: file_tools.py  git_tools.py  lint_tools.py  web_tools.py
